# MINs

./: CMakeLists.txt  LICENSE  README.md
Misc/Architectures/: A0.json  A1.json  A10.json  A2.json  A3.json  A4.json  A5.json  A6.json  A7.json  A8.json  A9.json
Misc/Graphs/: 16_Mac.dot  1_Fir16_5_Arf.dot  1_Pipeline.dot  2_Ewf_2_Conv3_4_Horner_Bezier_Surf.dot  2_Fir16.dot  4_Ewf.dot  5_Synthetic_1_Fir16.dot  6_Mults1.dot  7_Conv3.dot  7_Synthetic.dot  7_Synthetic_1_Mults1.dot  8_Synthetic.dot  debug.dot
Misc/Results/: random100000.txt
Source/: Main.cpp  Network.cpp  Network.h
Source/Components/: Architecture.cpp  Architecture.h  Graph.cpp  Graph.h  Network.cpp  Network.h
Source/Heuristics/: Heuristic.h  LocalSearch.cpp  LocalSearch.h  SimulatedAnnealing.cpp  SimulatedAnnealing.h
Source/Utils/: DataLoader.h  MyStack.h  Node.h  Random.cpp  Random.h
